[package]
name = "phoenix-common"
version = "0.2.1"
edition = "2021"
resolver = "2"
repository = "https://github.com/Ellipsis-Labs/phoenix-v1"
authors = ["Ellipsis Labs <maintainers@ellipsislabs.xyz>"]
description = "On-chain order book that atomically settles trades"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "phoenix"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[dependencies]
shank = "0.0.12"
spl-token = { version = "=3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = [ "no-entrypoint" ] } 
solana-program = "1.16.3"
borsh = "0.9.3"
bytemuck = "1.13.0"
lib-sokoban = "0.3.0" 
num_enum = "0.5.9"
itertools = "0.10.5"
thiserror = "1.0.38"
ellipsis-macros = "0.1.1" 
solana-security-txt = "1.1.0"
static_assertions = "1.1.0"

[dev-dependencies]
rand = "0.7.3"